# xstatic

./: CMakeLists.txt  Doxyfile  LICENSE.md  README.md
cli/: CMakeLists.txt  main_cli.cpp
gui/: CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  aboutdialog.cpp  aboutdialog.h  cqwin32.aps  cqwin32.rc  cscope.in.out  cscope.po.out  files.lst  fileviewer.cpp  fileviewer.h  fileviewsettingsdialog.cpp  fileviewsettingsdialog.h  graphdialog.cpp  graphdialog.h  highlighter.cpp  highlighter.h  langtable.cpp  langtable.h  listhandler.cpp  listhandler.h  main_gui.cpp  mainwindow.cpp  mainwindow.h  searchhandler.cpp  searchhandler.h  sqlqueryadv.cpp  sqlqueryadv.h  std2qt.cpp  std2qt.h  xstatic.qrc
gui/translations/: dowebtranslate.pl  tslist.txt  xstatic_de.ts  xstatic_en.ts  xstatic_es.ts  xstatic_fr.ts  xstatic_id.ts  xstatic_it.ts  xstatic_ja.ts  xstatic_ko.ts  xstatic_zh-CHS.ts  xstatic_zh-CHT.ts
gui/ui/: aboutDialog.ui  graphDialog.ui  mainWindow.ui
helper/: FindLemon.cmake
makedb/: cs2sq.cpp  cs2sq.h  cscommon.h  csdbparser.cpp  csdbparser.h  ctagread.cpp  ctagread.h  main.cpp  optlist.cpp  optlist.h  sqlbase.cpp  sqlbase.h  swver.h
querylib/: CMakeLists.txt  sinks.txt  small_lib.cpp  small_lib.h  sqlquery.cpp  sqlquery.h
showgraph/: core_iface.h  showgraph.cpp
showgraph/Graph/: README.txt  agraph.h  edge.cpp  edge.h  edge_inline.h  graph.cpp  graph.h  graph_iface.h  graph_inline.h  marker.h  node.cpp  node.h  node_inline.h  node_iter.h  num.h  predecls.h
showgraph/GraphView/: edge_helper.cpp  edge_helper.h  edge_item.cpp  edge_item.h  graph_view.cpp  graph_view.h  gstyle.h  gview_iface.h  gview_impl.h  navigation.cpp  navigation.h  node_item.cpp  node_item.h  style_edit.cpp  style_edit.h  visible_edge.cpp  visible_edge.h
showgraph/Layout/: aux_edge.h  aux_graph.cpp  aux_graph.h  aux_node.h  layout.cpp  layout_iface.h  node_group.cpp  node_group.h
showgraph/Utils/: asrt.h  conf.cpp  conf.h  conf_utest.cpp  list.h  list_utest.cpp  mem.h  mem_chunk.h  mem_entry.h  mem_fixed_pool.h  mem_mgr.cpp  mem_mgr.h  mem_obj.h  mem_pool.h  mem_ref.h  mem_utest.cpp  misc.h  print.h  singleton.h  utils_iface.h  utils_utest.cpp
ubuntu-install/: INSTALL.md  ubuntu-bin.tgz
